; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sfxge/extr_sfxge_ev.c_sfxge_ev_qmoderate.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sfxge/extr_sfxge_ev.c_sfxge_ev_qmoderate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sfxge_softc = type { %struct.sfxge_evq** }
%struct.sfxge_evq = type { i64, i32* }

@SFXGE_EVQ_STARTED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [37 x i8] c"evq->init_state != SFXGE_EVQ_STARTED\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sfxge_softc*, i32, i32)* @sfxge_ev_qmoderate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sfxge_ev_qmoderate(%struct.sfxge_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.sfxge_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.sfxge_evq*, align 8
  %8 = alloca i32*, align 8
  store %struct.sfxge_softc* %0, %struct.sfxge_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.sfxge_softc*, %struct.sfxge_softc** %4, align 8
  %10 = getelementptr inbounds %struct.sfxge_softc, %struct.sfxge_softc* %9, i32 0, i32 0
  %11 = load %struct.sfxge_evq**, %struct.sfxge_evq*** %10, align 8
  %12 = load i32, i32* %5, align 4
  %13 = zext i32 %12 to i64
  %14 = getelementptr inbounds %struct.sfxge_evq*, %struct.sfxge_evq** %11, i64 %13
  %15 = load %struct.sfxge_evq*, %struct.sfxge_evq** %14, align 8
  store %struct.sfxge_evq* %15, %struct.sfxge_evq** %7, align 8
  %16 = load %struct.sfxge_evq*, %struct.sfxge_evq** %7, align 8
  %17 = getelementptr inbounds %struct.sfxge_evq, %struct.sfxge_evq* %16, i32 0, i32 1
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %8, align 8
  %19 = load %struct.sfxge_evq*, %struct.sfxge_evq** %7, align 8
  %20 = getelementptr inbounds %struct.sfxge_evq, %struct.sfxge_evq* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @SFXGE_EVQ_STARTED, align 8
  %23 = icmp eq i64 %21, %22
  %24 = zext i1 %23 to i32
  %25 = call i32 @KASSERT(i32 %24, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @efx_ev_qmoderate(i32* %26, i32 %27)
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @efx_ev_qmoderate(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
